tests/baselines/reference/fuzzy.errors.txt
0.ts line 13 col 18: error TS2137: Class M.C declares interface M.I but does not implement it:
	Type 'M.C' is missing property 'alsoWorks' from type 'M.I'.
